--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-body, html, ul {
+body,
+html,
+ul {
   margin: 0px;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -6,26 +8,32 @@ body, html, ul {
   list-style: none;
   margin: 0 auto;
   max-width: 1280px;
-  font-family: 'Quicksand', sans-serif;
-  background: #2c2c2c; }
+  font-family: "Quicksand", sans-serif;
+  background: #2c2c2c;
+}
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
-.title, .background .background-text h3 {
+.title,
+.background .background-text h3 {
   color: #f4f4f4;
   text-transform: capitalize;
   text-align: center;
-  font-size: 20px; }
+  font-size: 20px;
+}
 
 /* GRID  */
 .grid {
   display: grid;
   grid-template-columns: repeat 1fr;
-  grid-template-areas: "header" "skills" "project" "footer"; }
+  grid-template-areas: "header" "skills" "project" "footer";
+}
 
 header {
-  grid-area: header; }
+  grid-area: header;
+}
 
 .background .background-text {
   height: 100%;
@@ -34,16 +42,19 @@ header {
   justify-content: center;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
-  .background .background-text h1 {
-    text-transform: capitalize;
-    margin: 0;
-    font-size: 70px; }
-  .background .background-text h2 {
-    color: #1DE9B6;
-    text-transform: capitalize;
-    margin: 0;
-    font-size: 40px; }
+  justify-content: center;
+}
+.background .background-text h1 {
+  text-transform: capitalize;
+  margin: 0;
+  font-size: 70px;
+}
+.background .background-text h2 {
+  color: #1de9b6;
+  text-transform: capitalize;
+  margin: 0;
+  font-size: 40px;
+}
 .background .img {
   background: url("../img/background5.jpg");
   height: 100vh;
@@ -51,105 +62,200 @@ header {
   background-size: cover;
   display: flex;
   animation: opening 4s forwards;
-  -webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
-  clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%); }
+  -webkit-clip-path: polygon(
+    50% 0%,
+    90% 20%,
+    100% 60%,
+    75% 100%,
+    25% 100%,
+    0% 60%,
+    10% 20%
+  );
+  clip-path: polygon(
+    50% 0%,
+    90% 20%,
+    100% 60%,
+    75% 100%,
+    25% 100%,
+    0% 60%,
+    10% 20%
+  );
+}
 
 @keyframes opening {
   0% {
-    -webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
-    clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%); }
+    -webkit-clip-path: polygon(
+      50% 0%,
+      90% 20%,
+      100% 60%,
+      75% 100%,
+      25% 100%,
+      0% 60%,
+      10% 20%
+    );
+    clip-path: polygon(
+      50% 0%,
+      90% 20%,
+      100% 60%,
+      75% 100%,
+      25% 100%,
+      0% 60%,
+      10% 20%
+    );
+  }
   50% {
-    -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 0 0);
-    clip-path: polygon(50% 0%, 100% 0, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 0 0); }
+    -webkit-clip-path: polygon(
+      50% 0%,
+      100% 0,
+      100% 60%,
+      75% 100%,
+      25% 100%,
+      0% 60%,
+      0 0
+    );
+    clip-path: polygon(
+      50% 0%,
+      100% 0,
+      100% 60%,
+      75% 100%,
+      25% 100%,
+      0% 60%,
+      0 0
+    );
+  }
   100% {
-    -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 100%, 75% 100%, 25% 100%, 0 100%, 0 0);
-    clip-path: polygon(50% 0%, 100% 0, 100% 100%, 75% 100%, 25% 100%, 0 100%, 0 0); } }
+    -webkit-clip-path: polygon(
+      50% 0%,
+      100% 0,
+      100% 100%,
+      75% 100%,
+      25% 100%,
+      0 100%,
+      0 0
+    );
+    clip-path: polygon(
+      50% 0%,
+      100% 0,
+      100% 100%,
+      75% 100%,
+      25% 100%,
+      0 100%,
+      0 0
+    );
+  }
+}
 /* NAVIGATION BAR */
 .nav {
   display: flex;
   justify-content: center;
   padding: 20px;
-  background-color: #070707; }
-  .nav .button-toggle {
-    display: none; }
-  .nav .menu a, .nav .menu a:hover {
-    text-decoration: none;
-    color: #f4f4f4;
-    margin: 20px;
-    padding: 10px;
-    border-bottom: 2px solid #070707; }
-    .nav .menu a:hover {
-      border-bottom: 2px solid #1DE9B6; }
-  .nav .logo {
-    flex: 1; }
-    .nav .logo a, .nav .logo .menu a:hover, .nav .menu .logo a:hover {
-      text-transform: uppercase;
-      text-align: center;
-      text-decoration: none;
-      color: #1DE9B6;
-      font-weight: bold;
-      border-radius: 50%;
-      border: 1px solid #1DE9B6;
-      padding: 5px; }
-  .nav #toggle {
-    display: none; }
+  background-color: #070707;
+}
+.nav .button-toggle {
+  display: none;
+}
+.nav .menu a,
+.nav .menu a:hover {
+  text-decoration: none;
+  color: #f4f4f4;
+  margin: 20px;
+  padding: 10px;
+  border-bottom: 2px solid #070707;
+}
+.nav .menu a:hover {
+  border-bottom: 2px solid #1de9b6;
+}
+.nav .logo {
+  flex: 1;
+}
+.nav .logo a,
+.nav .logo .menu a:hover,
+.nav .menu .logo a:hover {
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  color: #1de9b6;
+  font-weight: bold;
+  border-radius: 50%;
+  border: 1px solid #1de9b6;
+  padding: 5px;
+}
+.nav #toggle {
+  display: none;
+}
 
 .projects {
   grid-area: project;
-  margin-bottom: 10px; }
-  .projects .fa-arrow-circle-up {
-    color: #1DE9B6;
-    font-size: 40px;
-    transform: rotate(0deg) scale(1);
-    transition: all 0.5s ease; }
-    .projects .fa-arrow-circle-up:hover {
-      transform: rotate(360deg) scale(1.1); }
+  margin-bottom: 10px;
+}
+.projects .fa-arrow-circle-up {
+  color: #1de9b6;
+  font-size: 40px;
+  transform: rotate(0deg) scale(1);
+  transition: all 0.5s ease;
+}
+.projects .fa-arrow-circle-up:hover {
+  transform: rotate(360deg) scale(1.1);
+}
 
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; }
-  .cards a, .cards .nav .menu a:hover, .nav .menu .cards a:hover {
-    text-decoration: none;
-    margin: 20px 0; }
+  justify-content: space-around;
+  opacity: 0.6;
+}
+.cards a,
+.cards .nav .menu a:hover,
+.nav .menu .cards a:hover {
+  text-decoration: none;
+  margin: 20px 0;
+}
 
 .card {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: #1DE9B6;
+  background-color: #1de9b6;
   height: 430px;
   width: 350px;
-  overflow: hidden; }
-  .card .card-img {
-    background-color: #000;
-    overflow: hidden; }
-    .card .card-img img {
-      height: 350px;
-      width: 350px;
-      background-position: center;
-      background-size: cover;
-      display: block;
-      opacity: 1;
-      transition: opacity 0.5s, height 0.5s, transform 0.5s;
-      transform: scale(1); }
-  .card .card-title h3 {
-    color: #070707;
-    font-size: 20px; }
-  .card .card-title .card-description {
-    opacity: 0;
-    transform: translateY(-50px);
-    transition: opacity transform 0.5s;
-    transition-delay: 0.1s; }
-    .card .card-title .card-description p {
-      text-decoration: none;
-      color: #070707; }
+  overflow: hidden;
+}
+.card .card-img {
+  background-color: #000;
+  overflow: hidden;
+}
+.card .card-img img {
+  height: 350px;
+  width: 350px;
+  background-position: center;
+  background-size: cover;
+  display: block;
+  opacity: 1;
+  transition: opacity 0.5s, height 0.5s, transform 0.5s;
+  transform: scale(1);
+}
+.card .card-title h3 {
+  color: #070707;
+  font-size: 20px;
+}
+.card .card-title .card-description {
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: opacity transform 0.5s;
+  transition-delay: 0.1s;
+}
+.card .card-title .card-description p {
+  text-decoration: none;
+  color: #070707;
+}
 
 .card:hover .card-img img {
-  opacity: 0.6;
+  opacity: 0.3;
   height: 200px;
-  transform: scale(1.2); }
+  transform: scale(1.2);
+}
 .card:hover .card-description {
   opacity: 1;
-  transform: translateY(0); }
+  transform: translateY(0);
+}
 
 footer {
   grid-area: footer;
@@ -157,45 +263,60 @@ footer {
   padding: 10px;
   color: #f4f4f4;
   text-align: center;
-  margin: 0; }
-  footer .social-network h3 {
-    font-size: 25px;
-    color: #f4f4f4; }
-  footer .social-network p {
-    font-size: 20px;
-    color: #f4f4f4; }
-  footer .social-network .fab {
-    font-size: 30px;
-    color: #f4f4f4;
-    padding: 5px; }
-  footer p {
-    font-size: 10px; }
+  margin: 0;
+}
+footer .social-network h3 {
+  font-size: 25px;
+  color: #f4f4f4;
+}
+footer .social-network p {
+  font-size: 20px;
+  color: #f4f4f4;
+}
+footer .social-network .fab {
+  font-size: 30px;
+  color: #f4f4f4;
+  padding: 5px;
+}
+footer p {
+  font-size: 10px;
+}
 
 @media all and (max-width: 650px) {
   .background .img {
-    height: 90vh; }
+    height: 90vh;
+  }
 
   .nav {
     justify-content: center;
-    height: auto; }
-    .nav .menu {
-      display: none; }
-      .nav .menu a, .nav .menu a:hover {
-        display: flex;
-        flex-direction: column;
-        margin: 20px; }
-    .nav .button-toggle {
-      display: block;
-      cursor: pointer;
-      padding: 0; }
-      .nav .button-toggle .fa-bars {
-        color: #f4f4f4;
-        font-size: 20px; }
+    height: auto;
+  }
+  .nav .menu {
+    display: none;
+  }
+  .nav .menu a,
+  .nav .menu a:hover {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+  }
+  .nav .button-toggle {
+    display: block;
+    cursor: pointer;
+    padding: 0;
+  }
+  .nav .button-toggle .fa-bars {
+    color: #f4f4f4;
+    font-size: 20px;
+  }
 
   #toggle:checked + .menu {
-    display: block; }
+    display: block;
+  }
 
   .logo {
-    font-size: 20px; } }
+    font-size: 20px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
